--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@
     gap: 11px;
     justify-content: space-between;
     align-items: center;
+    cursor: pointer;
 }
 
 .logo-title {
@@ -57,6 +58,12 @@
     text-decoration: none;
 }
 
+.menu-items:hover {
+    transition: 0.3s;
+    text-decoration: underline;
+
+}
+
 .nav-button {
     color: white;
     background-color: #FEA301;
@@ -65,6 +72,14 @@
     padding: 10px 60px;
     font-size: 1.25rem;
     font-weight: 600;
+    cursor: pointer;
+}
+
+.nav-button:hover {
+    color: #FEA301;
+    background-color: white;
+    border: 2px solid #FEA301;
+    transition: 0.3s;
 }
 
 .nav-icon>.fa-bars {
@@ -114,11 +129,23 @@
     font-weight: bold;
     border: 2px solid black;
     border-radius: 12px;
+    cursor: pointer;
 }
 
-/* Mobile Responsive */
+.banner-button:hover {
+    color: black;
+    background-color: white;
+    border: 2px solid black;
+    transition: 0.3s;
+}
+
+
+
+
+/* Mobile Responsive styles */
 @media screen and (max-width: 576px) {
 
+    /* Nav and Banner Responsive styles */
     .logo-title,
     .menu,
     .nav-button {
@@ -131,6 +158,52 @@
         padding: 12px 16px;
     }
 
-    .banner{
+    .banner-image {
+        padding: 0px 20px;
+    }
+
+    .banner-image-content {
+        width: 100%;
+
+    }
+
+    .banner {
         flex-direction: column-reverse;
+        gap: 0px;
+    }
+
+    .banner-content {
+        margin: 20px 30px;
+    }
+
+    .banner-title {
+        font-size: 1.2rem;
+        text-align: center;
+        padding-top: ;
+    }
+
+    .banner-description {
+        font-size: 1rem;
+        text-align: center;
+    }
+
+    .banner-button {
+        font-size: 1rem;
+        padding: 10px 24px;
+    }
+
+    .banner-buttons {
+        text-align: center;
+    }
+
+    .nav-icon>.fa-bars {
+        font-size: 2.5rem;
+    }
+
+    /* Responsive styles */
+
+
+
+
+
 }
