--- a/style.css
+++ b/style.css
@@ -203,23 +203,75 @@
 .arrow-icons{
     text-align: center;
 }
-.fa-solid{
+.fa-arrow-left, .fa-arrow-right{
     font-size: 30px;
-    width: 60px;
-    height: 60px;
-    border: 2px solid #FEA301;
-    border-radius: 30px;
-    color: white;
-    background-color: #FEA301;
     cursor: pointer;
+    color: white;
+    border: 1px solid #FEA301;
+    border-radius: 50%;
+    background-color: #FEA301;
+    padding: 18px 20px;
 }
-.fa-solid:hover{
-    border: 2px solid #FEA301;
+.fa-arrow-left:hover, .fa-arrow-right:hover{
     color: #FEA301;
     background-color: white;
     transition: 0.3s;
 }
+/* Stories Section Starts */
 
+
+/* Footer Section starts */
+.footer-section{
+    background-color: #01ACFD;
+    padding: 120px 0px;
+}
+.footer-section-contents{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 50px;
+}
+.footer-logo-section{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.footer-title{
+    font-size: 2.7rem;
+    color: white;
+    font-weight: bold;
+}
+.footer-description{
+    margin-top: 30px;
+    font-size: 1.25rem;
+    color: white;
+}
+.footer-second-part-title{
+    font-size: 1.5rem;
+    color: white;
+    font-weight: bold;
+    margin-bottom: 50px;
+}
+.footer-menu{
+    font-size: 1.25rem;
+    color: white;
+    font-weight: 400;
+}
+.footer-menus li{
+    list-style: none;
+    margin-bottom: 20px;
+    cursor: pointer;
+}
+.footer-menus li a{
+    text-decoration: none;
+}
+.footer-menu-social ul{
+    display: flex;
+    gap: 10px;
+    cursor: pointer;
+}
+.footer-menu-social li{
+    list-style: none;
+}
 /* Mobile Responsive styles */
 @media screen and (max-width: 576px) {
 
@@ -306,8 +358,21 @@
 
 
 /* Footer Responsive styles */
-
-
-
+    .footer-section-contents{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .footer-title{
+        font-size: 2rem;
+    }
+    .footer-description{
+        font-size: 1rem;
+        padding-right: 50px;
+    }
+    .footer-logo-section, .footer-description, .footer-section-content{
+        padding-left: 20px;
+    }
+    .footer-second-part-title{
+        margin-bottom: 27px;
+    }
 
 }
