--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@
 }
 .background{
     background-image: url(images/bg.png);
-    background-repeat: no-repeat;
 }
 .section-title{
     font-size: 2.7rem;
@@ -218,8 +217,39 @@
     transition: 0.3s;
 }
 /* Stories Section Starts */
-
-
+.stories{    
+    background: 
+    url(images/bg.png),
+    linear-gradient(0deg, rgba(254, 163, 1, 0.3) 0%, #FFFFFF 100%);
+}
+.stories-cards{
+    display: flex;
+    gap: 20px;
+    margin: 80px 0px;
+}
+.stories-cards-2{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+}
+.stories-card-1{
+    border: 1px solid rgba(254, 163, 1, 0.3);
+    border-radius: 16px;
+    height: 630px;
+    background-color: white;
+}
+.stories-card-2{
+    border: 1px solid rgba(254, 163, 1, 0.3);
+    border-radius: 16px;
+    background-color: white;
+}
+.stories-image{
+    width: 100%;
+    border-radius: 16px 16px 0px 0px ;
+}
+.stories-card-1-content{
+    margin-top: 400px;
+}
 /* Footer Section starts */
 .footer-section{
     background-color: #01ACFD;
