--- a/style.css
+++ b/style.css
@@ -223,7 +223,8 @@
     linear-gradient(0deg, rgba(254, 163, 1, 0.3) 0%, #FFFFFF 100%);
 }
 .stories-cards{
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     margin: 80px 0px;
 }
@@ -235,21 +236,66 @@
 .stories-card-1{
     border: 1px solid rgba(254, 163, 1, 0.3);
     border-radius: 16px;
-    height: 630px;
     background-color: white;
+    cursor: pointer;
 }
 .stories-card-2{
     border: 1px solid rgba(254, 163, 1, 0.3);
     border-radius: 16px;
+    width: 100%;
     background-color: white;
+    cursor: pointer;
 }
 .stories-image{
     width: 100%;
     border-radius: 16px 16px 0px 0px ;
 }
 .stories-card-1-content{
-    margin-top: 400px;
+    padding: 0px 40px;
 }
+.stories-card-2-content{
+    padding-left: 30px;
+}
+.stories-title{
+    font-size: 1.5rem;
+    line-height: 2.3rem;
+    padding-top: 58px;
+    padding-right: 40px;
+}
+.stories-title-2{
+    font-size: 1rem;
+    line-height: 1.7rem;
+    padding-top: 38px;
+}
+.stories-description{
+    font-size: 1rem;
+    line-height: 1.75rem;
+    padding: 30px 0px;
+}
+.stories-button{
+    font-size: 1rem;
+    color: white;
+    padding: 16px 18px;
+    border-radius: 48px;
+    border: 1px solid #3cd8e8;
+    background-color: #3cd8e8;
+    position: absolute;
+    margin-top: -28px;
+    cursor: pointer;
+}
+
+.stories-button-2{
+    position: absolute;
+    margin-top: -20px;
+    font-size: 0.8rem;
+    padding: 10px 18px;
+    border-radius: 48px;
+    background-color: #95B226;
+    border: 1px solid #95B226;
+    color: white;
+    cursor: pointer;
+}
+
 /* Footer Section starts */
 .footer-section{
     background-color: #01ACFD;
@@ -264,6 +310,7 @@
     display: flex;
     align-items: center;
     gap: 10px;
+    cursor: pointer;
 }
 .footer-title{
     font-size: 2.7rem;
@@ -384,10 +431,36 @@
         display: none;
     }
 /* Stories Responsive styles */
-
-
+    .stories-cards{
+        margin: 20px 0px;
+    }
+    .stories-cards-1{
+        display: none;
+    }
+    .stories-cards{
+        grid-template-columns: 1fr;
+    }
+    .stories-cards-2{
+        padding: 20px;
+    }
+    .stories-card-2-content{
+        padding-left: 20px;
+    }
+    .stories-title-2{
+        font-size: 0.6rem;
+        line-height: 1rem;
+        padding-top: 10px;
+        padding-bottom: 20px;
+    }
+    .stories-button-2{
+        font-size: 0.6rem;
+        padding: 6px 12px;
+    }
 
 /* Footer Responsive styles */
+    .footer-section{
+        padding-top: 65px;
+    }
     .footer-section-contents{
         grid-template-columns: repeat(1, 1fr);
     }
